--- a/index.html
+++ b/index.html
@@ -5,24 +5,50 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <title>Frontend Mentor | Profile card component</title>
+  <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet" />
+  <link rel="stylesheet"  href="style.css">
 </head>
 
 <body>
-  Victor Crest
-  26
-  London
+  <div id="card-container">
 
-  80K
-  Followers
+    <div id="card-content">
+      <img src="images/bg-pattern-card.svg" alt="patterned background image" class="card-pix"/>
 
-  803K
-  Likes
+      <div id="card-header">
+        <img src="images/image-victor.jpg" alt="Victor's profile image" class="profile-pix" />
+        <div class="card-header-content">
+          <h4>Victor Crest <span class="data"><small>26</small></span></h4>
+          <p class="data"><small>London</small></p>
+        </div> 
+      </div>
 
-  1.4K
-  Photos
+      <div id="card-log">
+
+        <div class="card-log-content">
+          <h4>80K</h4>
+          <p class="stats"><small>Followers</small></p>
+        </div>
+        
+        <div class="card-log-content">
+          <h4>803K</h4>
+          <p class="stats"><small>Likes</small></p>
+        </div>
+
+        <div class="card-log-content">
+          <h4>1.4K</h4>
+          <p class="stats"><small>Photos</small></p>
+        </div>
+
+      </div>
+
+    </div>
+
+  </div>
+
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://www.twitter.com/amarealcoder" target="_blank">UGORJI MIRACLE</a>.
   </div>
 </body>
 </html>
